# sentiment-analysis-fastapi

./: .pre-commit-config.yaml  Dockerfile  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt
sent_fast_api/: model.py  sent_api.py
tests/: test_sent_fast_api.py
